k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
spec:
  selector:
    app: node-api
  ports:
  - protocol: TCP
    port: 80                 # Expose port 80
    targetPort: 3000
  type: ClusterIP
